--- a/.gitattributes
+++ b/.gitattributes
@@ -32,6 +32,13 @@
 *.css linguist-detectable=true
 *.css linguist-documentation=false
 *.css linguist-language=CSS
+# ALGOL Source file
+*.alg linguist-detectable=true
+*.alg linguist-documentation=false
+*.alg linguist-language=ALGOL
+*.ALG linguist-detectable=true
+*.ALG linguist-documentation=false
+*.ALG linguist-language=ALGOL
 # Less stylesheet file
 *.less linguist-detectable=true
 *.less linguist-documentation=false
@@ -164,7 +171,7 @@
 # End of linguist script
 
 # File info
-# File type: gitattributes file (.gitattributes)
-# File version: 4 (2022, Tuesday, June 28th at 2:32 pm PST)
-# Line count (including blank lines and compiler line): 171
+# File type: gitattributes file (*.gitattributes)
+# File version: 5 (2022, Tuesday, September 27th at 2:50 pm PST)
+# Line count (including blank lines and compiler line): 178
 # End of script
